syntax = "proto3";

option java_package = "com.example.grpc"; // Change this to match your Java package
option java_multiple_files = true;
option java_outer_classname = "UserProto";

message UserSession {
  string sessionId = 1;
  string userId = 2;
  string userUid = 3;
}
