syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "HelloProto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
